--- a/labour-workers-frontend/src/app/pages/signup/signup.component.html
+++ b/labour-workers-frontend/src/app/pages/signup/signup.component.html
@@ -1,26 +1,28 @@
-<div class="signup-container">
-  <h2>Sign Up</h2>
-  <form (ngSubmit)="onSignup()">
-    <div>
-      <label>Username:</label>
-      <input type="text" [(ngModel)]="username" name="username" required />
-    </div>
-    <div>
-      <label>Email:</label>
-      <input type="email" [(ngModel)]="email" name="email" required />
-    </div>
-    <div>
-      <label>Password:</label>
-      <input
-        type="password"
-        [(ngModel)]="password"
-        name="password"
-        required
-      />
-    </div>
-    <button type="submit">Sign Up</button>
-  </form>
+<div class="signup-wrapper">
+  <div class="signup-container">
+    <h2>Sign Up</h2>
+    <form (ngSubmit)="onSignup()">
+      <div>
+        <label>Username:</label>
+        <input type="text" [(ngModel)]="username" name="username" required />
+      </div>
+      <div>
+        <label>Email:</label>
+        <input type="email" [(ngModel)]="email" name="email" required />
+      </div>
+      <div>
+        <label>Password:</label>
+        <input
+          type="password"
+          [(ngModel)]="password"
+          name="password"
+          required
+        />
+      </div>
+      <button type="submit">Sign Up</button>
+    </form>
 
-  <div *ngIf="successMessage" class="success">{{ successMessage }}</div>
-  <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+    <div *ngIf="successMessage" class="success">{{ successMessage }}</div>
+    <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+  </div>
 </div>
